Writing home.html!

--- a/templates/404.html
+++ b/templates/404.html
@@ -69,7 +69,7 @@
         <h1>404</h1>
         <h2>Sahifa topilmadi</h2>
         <p>Kechirasiz, siz izlagan sahifa mavjud emas yoki ko'chirilgan.</p>
-        <a href="/">Bosh sahifaga qaytish</a>
+        <a href="{% url 'home' %}">Bosh sahifaga qaytish</a>
     </div>
 </body>
 
