--- a/templates/properties-grid.html
+++ b/templates/properties-grid.html
@@ -17,7 +17,7 @@
         <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="#">Home</a>
+              <a href="/">Home</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
               Properties Grid
@@ -32,24 +32,24 @@
 <section class="property-grid grid">
   <div class="container">
     <div class="row">
+      {% for property in properties %}
       <div class="col-md-4">
         <div class="card-box-a card-shadow">
           <div class="img-box-a">
-            <img src="img/property-1.jpg" alt="" class="img-a img-fluid">
+            <img src="{{ property.image.url }}" alt="img" class="img-a img-fluid">
           </div>
           <div class="card-overlay">
             <div class="card-overlay-a-content">
               <div class="card-header-a">
                 <h2 class="card-title-a">
-                  <a href="#">204 Mount
-                    <br /> Olive Road Two</a>
+                  <a href="{{ property.get_absolute_url }}">{{ property.name }}
                 </h2>
               </div>
               <div class="card-body-a">
                 <div class="price-box d-flex">
-                  <span class="price-a">rent | $ 12.000</span>
+                  <span class="price-a">{{ property.status }} | {{ property.price_type }} {{ property.price }}</span>
                 </div>
-                <a href="property-single.html" class="link-a">Click here to view
+                <a href="{% url 'property-single' property.slug %}" class="link-a">Click here to view
                   <span class="ion-ios-arrow-forward"></span>
                 </a>
               </div>
@@ -57,21 +57,21 @@
                 <ul class="card-info d-flex justify-content-around">
                   <li>
                     <h4 class="card-info-title">Area</h4>
-                    <span>340m
+                    <span>{{ property.area }}m
                       <sup>2</sup>
                     </span>
                   </li>
                   <li>
                     <h4 class="card-info-title">Beds</h4>
-                    <span>2</span>
+                    <span>{{ property.beds }}</span>
                   </li>
                   <li>
                     <h4 class="card-info-title">Baths</h4>
-                    <span>4</span>
+                    <span>{{ property.baths }}</span>
                   </li>
                   <li>
                     <h4 class="card-info-title">Garages</h4>
-                    <span>1</span>
+                    <span>{{ property.garages }}</span>
                   </li>
                 </ul>
               </div>
@@ -79,6 +79,7 @@
           </div>
         </div>
       </div>
+      {% endfor %}
     </div>
   </div>
 </section>
