--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
                 <span></span>
                 <span></span>
             </button>
-            <a class="navbar-brand text-brand" href="/">Estate<span class="color-b">Agency</span></a>
+            <a class="navbar-brand text-brand" href="{% url 'home' %}">Estate<span class="color-b">Agency</span></a>
             <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none"
                 data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-expanded="false">
                 <span class="fa fa-search" aria-hidden="true"></span>
@@ -53,22 +53,16 @@
                         <a class="nav-link" href="{% url 'properties' %}">Property</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="blog-grid.html">Blog</a>
+                        <a class="nav-link" href="{% url 'agents' %}">Agent</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Pages
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="property-single.html">Property Single</a>
-                            <a class="dropdown-item" href="blog-single.html">Blog Single</a>
-                            <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
-                            <a class="dropdown-item" href="agent-single.html">Agent Single</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'article' %}">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
                 </ul>
             </div>
@@ -150,16 +144,16 @@
                     <nav class="nav-footer">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <a href="#">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#">About</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">Property</a>
+                                <a href="{% url 'properties' %}">Property</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">Blog</a>
+                                <a href="{% url 'article' %}">Blog</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="#">Contact</a>
