--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -9,21 +9,21 @@
     <div class="row">
       <div class="col-md-12 col-lg-8">
         <div class="title-single-box">
-          <h1 class="title-single">304 Blaster Up</h1>
-          <span class="color-text-a">Chicago, IL 606543</span>
+          <h1 class="title-single">{{ property.name }}</h1>
+          <span class="color-text-a">{{ property.location}}</span>
         </div>
       </div>
       <div class="col-md-12 col-lg-4">
         <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="index.html">Home</a>
+              <a href="/">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="property-grid.html">Properties</a>
+              <a href="{% url 'properties' %}">Properties</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-              304 Blaster Up
+              {{ property.name }}
             </li>
           </ol>
         </nav>
@@ -31,22 +31,20 @@
     </div>
   </div>
 </section>
-<!--/ Intro Single End /-->
 
-<!--/ Property Single Star /-->
 <section class="property-single nav-arrow-b">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div id="property-single-carousel" class="owl-carousel owl-arrow gallery-property">
           <div class="carousel-item-b">
-            <img src="img/slide-2.jpg" alt="">
+            <img src="{{ property.image.url }}" alt="img">
           </div>
           <div class="carousel-item-b">
-            <img src="img/slide-3.jpg" alt="">
+            <img src="{{ property.image.url }}" alt="img">
           </div>
           <div class="carousel-item-b">
-            <img src="img/slide-1.jpg" alt="">
+            <img src="{{ property.image.url }}" alt="img">
           </div>
         </div>
         <div class="row justify-content-between">
@@ -54,10 +52,10 @@
             <div class="property-price d-flex justify-content-center foo">
               <div class="card-header-c d-flex">
                 <div class="card-box-ico">
-                  <span class="ion-money">$</span>
+                  <span class="ion-money">{{ property.price_type }}</span>
                 </div>
                 <div class="card-title-c align-self-center">
-                  <h5 class="title-c">15000</h5>
+                  <h5 class="title-c">{{ property.price }}</h5>
                 </div>
               </div>
             </div>
@@ -73,37 +71,37 @@
                 <ul class="list">
                   <li class="d-flex justify-content-between">
                     <strong>Property ID:</strong>
-                    <span>1134</span>
+                    <span>{{ property.id }}</span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Location:</strong>
-                    <span>Chicago, IL 606543</span>
+                    <span>{{ property.location }}</span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Property Type:</strong>
-                    <span>House</span>
+                    <span>{{ property.type }}</span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Status:</strong>
-                    <span>Sale</span>
+                    <span>{{ property.status }}</span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Area:</strong>
-                    <span>340m
+                    <span>{{ property.area }}m
                       <sup>2</sup>
                     </span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Beds:</strong>
-                    <span>4</span>
+                    <span>{{ property.beds }}</span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Baths:</strong>
-                    <span>2</span>
+                    <span>{{ property.baths }}</span>
                   </li>
                   <li class="d-flex justify-content-between">
                     <strong>Garage:</strong>
-                    <span>1</span>
+                    <span>{{ property.garages }}</span>
                   </li>
                 </ul>
               </div>
@@ -119,16 +117,10 @@
             </div>
             <div class="property-description">
               <p class="description color-text-a">
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit
-                neque, auctor sit amet
-                aliquam vel, ullamcorper sit amet ligula. Cras ultricies ligula sed magna dictum porta.
-                Curabitur aliquet quam id dui posuere blandit. Mauris blandit aliquet elit, eget tincidunt
-                nibh pulvinar quam id dui posuere blandit.
+                {{ property.description|safe }}
               </p>
               <p class="description color-text-a no-margin">
-                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget
-                malesuada. Quisque velit nisi,
-                pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada.
+                {{ property.description_1|safe }}
               </p>
             </div>
             <div class="row section-t3">
@@ -140,15 +132,9 @@
             </div>
             <div class="amenities-list color-text-a">
               <ul class="list-a no-margin">
-                <li>Balcony</li>
-                <li>Outdoor Kitchen</li>
-                <li>Cable Tv</li>
-                <li>Deck</li>
-                <li>Tennis Courts</li>
-                <li>Internet</li>
-                <li>Parking</li>
-                <li>Sun Room</li>
-                <li>Concrete Flooring</li>
+                {% for amenities in property.amenities.all %}
+                <li>{{ amenities.name }}</li>
+                {% endfor %}
               </ul>
             </div>
           </div>
@@ -194,58 +180,56 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-lg-4">
-            <img src="img/agent-4.jpg" alt="" class="img-fluid">
+            <img src="{{ property.agent.image.url }}" alt="" class="img-fluid">
           </div>
           <div class="col-md-6 col-lg-4">
             <div class="property-agent">
-              <h4 class="title-agent">Anabella Geller</h4>
+              <h4 class="title-agent">{{ property.agent.full_name }}</h4>
               <p class="color-text-a">
-                Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet
-                dui. Quisque velit nisi,
-                pretium ut lacinia in, elementum id enim.
+                {{ property.agent.description|slice:":100"|safe }}
               </p>
               <ul class="list-unstyled">
                 <li class="d-flex justify-content-between">
                   <strong>Phone:</strong>
-                  <span class="color-text-a">(222) 4568932</span>
+                  <span class="color-text-a">{{ property.agent.phone_number }}</span>
                 </li>
                 <li class="d-flex justify-content-between">
                   <strong>Mobile:</strong>
-                  <span class="color-text-a">777 287 378 737</span>
+                  <span class="color-text-a">{{ property.agent.mobile_number }}</span>
                 </li>
                 <li class="d-flex justify-content-between">
                   <strong>Email:</strong>
-                  <span class="color-text-a">annabella@example.com</span>
+                  <span class="color-text-a">{{ property.agent.email }}</span>
                 </li>
                 <li class="d-flex justify-content-between">
                   <strong>Skype:</strong>
-                  <span class="color-text-a">Annabela.ge</span>
+                  <span class="color-text-a">{{ property.agent.skype }}</span>
                 </li>
               </ul>
               <div class="socials-a">
                 <ul class="list-inline">
                   <li class="list-inline-item">
-                    <a href="#">
+                    <a href="https://www.facebook.com/">
                       <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#">
+                    <a href="https://www.x.com/">
                       <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#">
+                    <a href="https://www.instagram.com/">
                       <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#">
+                    <a href="https://www.pinterest.com/">
                       <i class="fa fa-pinterest-p" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#">
+                    <a href="https://www.dribbble.com/">
                       <i class="fa fa-dribbble" aria-hidden="true"></i>
                     </a>
                   </li>
@@ -255,23 +239,24 @@
           </div>
           <div class="col-md-12 col-lg-4">
             <div class="property-contact">
-              <form class="form-a">
+              <form class="form-a" method="post">
+                {% csrf_token %}
                 <div class="row">
                   <div class="col-md-12 mb-1">
                     <div class="form-group">
-                      <input type="text" class="form-control form-control-lg form-control-a" id="inputName"
+                      <input type="text" class="form-control form-control-lg form-control-a" name="name" id="inputName"
                         placeholder="Name *" required>
                     </div>
                   </div>
                   <div class="col-md-12 mb-1">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-lg form-control-a" id="inputEmail1"
+                      <input type="email" class="form-control form-control-lg form-control-a" name="email" id="inputEmail1"
                         placeholder="Email *" required>
                     </div>
                   </div>
                   <div class="col-md-12 mb-1">
                     <div class="form-group">
-                      <textarea id="textMessage" class="form-control" placeholder="Comment *" name="message" cols="45"
+                      <textarea id="textMessage" class="form-control" name="comment" placeholder="Comment *" name="message" cols="45"
                         rows="8" required></textarea>
                     </div>
                   </div>
