artice app and about.html!

--- a/templates/blogs-grid.html
+++ b/templates/blogs-grid.html
@@ -17,7 +17,7 @@
         <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="index.html">Home</a>
+              <a href="/">Home</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
               News Grid
@@ -28,180 +28,36 @@
     </div>
   </div>
 </section>
-<!--/ Intro Single End /-->
 
-<!--/ News Grid Star /-->
 <section class="news-grid grid">
   <div class="container">
     <div class="row">
+      {% for article in articles %}
       <div class="col-md-4">
         <div class="card-box-b card-shadow news-box">
           <div class="img-box-b">
-            <img src="img/post-1.jpg" alt="" class="img-b img-fluid">
+            <img src="{{ article.image.url }}" alt="img" class="img-b img-fluid">
           </div>
           <div class="card-overlay">
             <div class="card-header-b">
               <div class="card-category-b">
-                <a href="#" class="category-b">Travel</a>
+                <a href="{{ article.get_absolute_url }}" class="category-b">{{ article.category.name }}</a>
               </div>
               <div class="card-title-b">
                 <h2 class="title-2">
-                  <a href="blog-single.html">Travel is comming
-                    <br> new</a>
+                  <a href="{% url 'article-single' article.slug %}">{{ article.title }}
                 </h2>
               </div>
               <div class="card-date">
-                <span class="date-b">18 Sep. 2017</span>
+                <span class="date-b">{{ article.created_at|date }}</span>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card-box-b card-shadow news-box">
-          <div class="img-box-b">
-            <img src="img/post-2.jpg" alt="" class="img-b img-fluid">
-          </div>
-          <div class="card-overlay">
-            <div class="card-header-b">
-              <div class="card-category-b">
-                <a href="blog-single.html" class="category-b">Travel</a>
-              </div>
-              <div class="card-title-b">
-                <h2 class="title-2">
-                  <a href="blog-single.html">Travel is comming
-                    <br> new</a>
-                </h2>
-              </div>
-              <div class="card-date">
-                <span class="date-b">18 Sep. 2017</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card-box-b card-shadow news-box">
-          <div class="img-box-b">
-            <img src="img/post-3.jpg" alt="" class="img-b img-fluid">
-          </div>
-          <div class="card-overlay">
-            <div class="card-header-b">
-              <div class="card-category-b">
-                <a href="#" class="category-b">Travel</a>
-              </div>
-              <div class="card-title-b">
-                <h2 class="title-2">
-                  <a href="blog-single.html">Travel is comming
-                    <br> new</a>
-                </h2>
-              </div>
-              <div class="card-date">
-                <span class="date-b">18 Sep. 2017</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card-box-b card-shadow news-box">
-          <div class="img-box-b">
-            <img src="img/post-4.jpg" alt="" class="img-b img-fluid">
-          </div>
-          <div class="card-overlay">
-            <div class="card-header-b">
-              <div class="card-category-b">
-                <a href="#" class="category-b">Travel</a>
-              </div>
-              <div class="card-title-b">
-                <h2 class="title-2">
-                  <a href="blog-single.html">Travel is comming
-                    <br> new</a>
-                </h2>
-              </div>
-              <div class="card-date">
-                <span class="date-b">18 Sep. 2017</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card-box-b card-shadow news-box">
-          <div class="img-box-b">
-            <img src="img/post-5.jpg" alt="" class="img-b img-fluid">
-          </div>
-          <div class="card-overlay">
-            <div class="card-header-b">
-              <div class="card-category-b">
-                <a href="#" class="category-b">Travel</a>
-              </div>
-              <div class="card-title-b">
-                <h2 class="title-2">
-                  <a href="blog-single.html">Travel is comming
-                    <br> new</a>
-                </h2>
-              </div>
-              <div class="card-date">
-                <span class="date-b">18 Sep. 2017</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card-box-b card-shadow news-box">
-          <div class="img-box-b">
-            <img src="img/post-6.jpg" alt="" class="img-b img-fluid">
-          </div>
-          <div class="card-overlay">
-            <div class="card-header-b">
-              <div class="card-category-b">
-                <a href="#" class="category-b">Travel</a>
-              </div>
-              <div class="card-title-b">
-                <h2 class="title-2">
-                  <a href="blog-single.html">Travel is comming
-                    <br> new</a>
-                </h2>
-              </div>
-              <div class="card-date">
-                <span class="date-b">18 Sep. 2017</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <nav class="pagination-a">
-          <ul class="pagination justify-content-end">
-            <li class="page-item disabled">
-              <a class="page-link" href="#" tabindex="-1">
-                <span class="ion-ios-arrow-back"></span>
-              </a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">1</a>
-            </li>
-            <li class="page-item active">
-              <a class="page-link" href="#">2</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">3</a>
-            </li>
-            <li class="page-item next">
-              <a class="page-link" href="#">
-                <span class="ion-ios-arrow-forward"></span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+      {% endfor %}
     </div>
   </div>
 </section>
-<!--/ News Grid End /-->
 
 {% endblock %}
