--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,7 +19,7 @@
         <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="index.html">Home</a>
+              <a href="{% url 'home' %}">Home</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
               Contact
@@ -30,9 +30,7 @@
     </div>
   </div>
 </section>
-<!--/ Intro Single End /-->
 
-<!--/ Contact Star /-->
 <section class="contact">
   <div class="container">
     <div class="row">
@@ -48,7 +46,8 @@
       <div class="col-sm-12 section-t8">
         <div class="row">
           <div class="col-md-7">
-            <form class="form-a contactForm" action="" method="post" role="form">
+            <form class="form-a contactForm" method="post" role="form">
+              {% csrf_token %}
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
               <div class="row">
@@ -68,7 +67,7 @@
                 </div>
                 <div class="col-md-12 mb-3">
                   <div class="form-group">
-                    <input type="url" name="subject" class="form-control form-control-lg form-control-a"
+                    <input type="text" name="subject" class="form-control form-control-lg form-control-a"
                       placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
                     <div class="validation"></div>
                   </div>
@@ -97,10 +96,10 @@
                 </div>
                 <div class="icon-box-content">
                   <p class="mb-1">Email.
-                    <span class="color-a">contact@example.com</span>
+                    <span class="color-a">turdalihasanboyev70@gmail.com</span>
                   </p>
                   <p class="mb-1">Phone.
-                    <span class="color-a">+54 356 945234</span>
+                    <span class="color-a">+998939195081</span>
                   </p>
                 </div>
               </div>
@@ -115,8 +114,7 @@
                 </div>
                 <div class="icon-box-content">
                   <p class="mb-1">
-                    Manhattan, Nueva York 10036,
-                    <br> EE. UU.
+                    Tashkent, Uzbekistan
                   </p>
                 </div>
               </div>
@@ -133,27 +131,27 @@
                   <div class="socials-footer">
                     <ul class="list-inline">
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
+                        <a href="https://www.facebook.com/" class="link-one">
                           <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
+                        <a href="https://www.x.com/" class="link-one">
                           <i class="fa fa-twitter" aria-hidden="true"></i>
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
+                        <a href="https://www.instagram.com/" class="link-one">
                           <i class="fa fa-instagram" aria-hidden="true"></i>
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
+                        <a href="https://www.pinterest.com/" class="link-one">
                           <i class="fa fa-pinterest-p" aria-hidden="true"></i>
                         </a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="#" class="link-one">
+                        <a href="https://dribbble.com/" class="link-one">
                           <i class="fa fa-dribbble" aria-hidden="true"></i>
                         </a>
                       </li>
@@ -168,6 +166,5 @@
     </div>
   </div>
 </section>
-<!--/ Contact End /-->
 
 {% endblock %}
