--- a/templates/about.html
+++ b/templates/about.html
@@ -27,15 +27,13 @@
     </div>
   </div>
 </section>
-<!--/ Intro Single End /-->
 
-<!--/ About Star /-->
 <section class="section-about">
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <div class="about-img-box">
-          <img src="img/slide-about-1.jpg" alt="" class="img-fluid">
+          <img src="{{ about.banner_image.url }}" alt="img" class="img-fluid">
         </div>
         <div class="sinse-box">
           <h3 class="sinse-title">EstateAgency
@@ -48,7 +46,7 @@
       <div class="col-md-12 section-t8">
         <div class="row">
           <div class="col-md-6 col-lg-5">
-            <img src="img/about-2.jpg" alt="" class="img-fluid">
+            <img src="{{ about.image.url }}" alt="img" class="img-fluid">
           </div>
           <div class="col-lg-2  d-none d-lg-block">
             <div class="title-vertical d-flex justify-content-start">
@@ -63,17 +61,7 @@
               </h3>
             </div>
             <p class="color-text-a">
-              Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus magna justo, lacinia eget
-              consectetur sed, convallis
-              at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum
-              ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit
-              neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-            </p>
-            <p class="color-text-a">
-              Sed porttitor lectus nibh. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.
-              Mauris blandit aliquet
-              elit, eget tincidunt nibh pulvinar a. Vivamus magna justo, lacinia eget consectetur sed,
-              convallis at tellus.
+              {{ about.description|safe }}
             </p>
           </div>
         </div>
@@ -81,9 +69,7 @@
     </div>
   </div>
 </section>
-<!--/ About End /-->
 
-<!--/ Team Star /-->
 <section class="section-agents section-t8">
   <div class="container">
     <div class="row">
@@ -96,30 +82,30 @@
       </div>
     </div>
     <div class="row">
+      {% for team in our_team %}
       <div class="col-md-4">
         <div class="card-box-d">
           <div class="card-img-d">
-            <img src="img/agent-7.jpg" alt="" class="img-d img-fluid">
+            <img src="{{ team.image.url }}" alt="img" class="img-d img-fluid">
           </div>
           <div class="card-overlay card-overlay-hover">
             <div class="card-header-d">
               <div class="card-title-d align-self-center">
                 <h3 class="title-d">
-                  <a href="agent-single.html" class="link-two">Margaret Sotillo
-                    <br> Escala</a>
+                  <a href="{{ team.get_absolute_url }}" class="link-two">{{ team.full_name }}
                 </h3>
               </div>
             </div>
             <div class="card-body-d">
               <p class="content-d color-text-a">
-                Sed porttitor lectus nibh, Cras ultricies ligula sed magna dictum porta two.
+                {{ team.description|slice:":30"|safe }}
               </p>
               <div class="info-agents color-a">
                 <p>
-                  <strong>Phone: </strong> +54 356 945234
+                  <strong>Phone: </strong> {{ team.phone_number }}
                 </p>
                 <p>
-                  <strong>Email: </strong> agents@example.com
+                  <strong>Email: </strong> {{ team.email }}
                 </p>
               </div>
             </div>
@@ -127,27 +113,27 @@
               <div class="socials-footer d-flex justify-content-center">
                 <ul class="list-inline">
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.facebook.com/" class="link-one">
                       <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.x.com/" class="link-one">
                       <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.instagram.com/turdali.hasanboyev.07/" class="link-one">
                       <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.pinterest.com/" class="link-one">
                       <i class="fa fa-pinterest-p" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://dribbble.com/" class="link-one">
                       <i class="fa fa-dribbble" aria-hidden="true"></i>
                     </a>
                   </li>
@@ -157,131 +143,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card-box-d">
-          <div class="card-img-d">
-            <img src="img/agent-6.jpg" alt="" class="img-d img-fluid">
-          </div>
-          <div class="card-overlay card-overlay-hover">
-            <div class="card-header-d">
-              <div class="card-title-d align-self-center">
-                <h3 class="title-d">
-                  <a href="agent-single.html" class="link-two">Stiven Spilver
-                    <br> Darw</a>
-                </h3>
-              </div>
-            </div>
-            <div class="card-body-d">
-              <p class="content-d color-text-a">
-                Sed porttitor lectus nibh, Cras ultricies ligula sed magna dictum porta two.
-              </p>
-              <div class="info-agents color-a">
-                <p>
-                  <strong>Phone: </strong> +54 356 945234
-                </p>
-                <p>
-                  <strong>Email: </strong> agents@example.com
-                </p>
-              </div>
-            </div>
-            <div class="card-footer-d">
-              <div class="socials-footer d-flex justify-content-center">
-                <ul class="list-inline">
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-dribbble" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card-box-d">
-          <div class="card-img-d">
-            <img src="img/agent-5.jpg" alt="" class="img-d img-fluid">
-          </div>
-          <div class="card-overlay card-overlay-hover">
-            <div class="card-header-d">
-              <div class="card-title-d align-self-center">
-                <h3 class="title-d">
-                  <a href="agent-single.html" class="link-two">Emma Toledo
-                    <br> Cascada</a>
-                </h3>
-              </div>
-            </div>
-            <div class="card-body-d">
-              <p class="content-d color-text-a">
-                Sed porttitor lectus nibh, Cras ultricies ligula sed magna dictum porta two.
-              </p>
-              <div class="info-agents color-a">
-                <p>
-                  <strong>Phone: </strong> +54 356 945234
-                </p>
-                <p>
-                  <strong>Email: </strong> agents@example.com
-                </p>
-              </div>
-            </div>
-            <div class="card-footer-d">
-              <div class="socials-footer d-flex justify-content-center">
-                <ul class="list-inline">
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-facebook" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-pinterest-p" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                  <li class="list-inline-item">
-                    <a href="#" class="link-one">
-                      <i class="fa fa-dribbble" aria-hidden="true"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
     </div>
   </div>
 </section>
-<!--/ Team End /-->
 
-{% endfor %}
+{% endblock %}
