--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'properties' %}">Property</a>
@@ -59,7 +59,7 @@
                         <a class="nav-link" href="{% url 'article' %}">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
@@ -147,7 +147,7 @@
                                 <a href="/">Home</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">About</a>
+                                <a href="{% url 'about' %}">About</a>
                             </li>
                             <li class="list-inline-item">
                                 <a href="{% url 'properties' %}">Property</a>
@@ -156,7 +156,7 @@
                                 <a href="{% url 'article' %}">Blog</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">Contact</a>
+                                <a href="{% url 'contact' %}">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -196,7 +196,6 @@
                         </p>
                     </div>
                     <div class="credits">
-                        
                         Designed by <a href="https://www.instagram.com/turdali.hasanboyev.07/">Turdiali Xasanboyev</a>
                     </div>
                 </div>
