--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,7 +46,7 @@
       <div class="col-sm-12 section-t8">
         <div class="row">
           <div class="col-md-7">
-            <form class="form-a contactForm" method="post" role="form">
+            <form class="form-a contactForm" method="post" action="send_contact" role="form">
               {% csrf_token %}
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
