--- a/templates/agent-single.html
+++ b/templates/agent-single.html
@@ -9,21 +9,21 @@
     <div class="row">
       <div class="col-md-12 col-lg-8">
         <div class="title-single-box">
-          <h1 class="title-single">Margaret Stone</h1>
-          <span class="color-text-a">Agent Immobiliari</span>
+          <h1 class="title-single">{{ agent.full_name }}</h1>
+          <span class="color-text-a">{{ agent.type }}</span>
         </div>
       </div>
       <div class="col-md-12 col-lg-4">
         <nav aria-label="breadcrumb" class="breadcrumb-box d-flex justify-content-lg-end">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
-              <a href="#">Home</a>
+              <a href="{% url 'home' %}">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="#">Agents</a>
+              <a href="{% url 'agents' %}">Agents</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-              Margaret Stone
+              {{ agent.full_name }}
             </li>
           </ol>
         </nav>
@@ -31,9 +31,7 @@
     </div>
   </div>
 </section>
-<!--/ Intro Single End /-->
 
-<!--/ Agent Single Star /-->
 <section class="agent-single">
   <div class="container">
     <div class="row">
@@ -41,71 +39,68 @@
         <div class="row">
           <div class="col-md-6">
             <div class="agent-avatar-box">
-              <img src="img/agent-7.jpg" alt="" class="agent-avatar img-fluid">
+              <img src="{{ agent.image.url }}" alt="img" class="agent-avatar img-fluid">
             </div>
           </div>
           <div class="col-md-5 section-md-t3">
             <div class="agent-info-box">
               <div class="agent-title">
                 <div class="title-box-d">
-                  <h3 class="title-d">Margaret Stone
-                    <br> Escala
+                  <h3 class="title-d">{{ agent.full_name }}
                   </h3>
                 </div>
               </div>
               <div class="agent-content mb-3">
                 <p class="content-d color-text-a">
-                  Sed porttitor lectus nibh. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
-                  Vivamus suscipit tortor
-                  eget felis porttitor volutpat. Vivamus suscipit tortor eget felis porttitor volutpat.
+                  {{ agent.description|safe }}
                 </p>
                 <div class="info-agents color-a">
                   <p>
                     <strong>Phone: </strong>
-                    <span class="color-text-a"> +54 356 945234 </span>
+                    <span class="color-text-a">{{ agent.phone_number }}</span>
                   </p>
                   <p>
                     <strong>Mobile: </strong>
-                    <span class="color-text-a"> 999 123 456 789</span>
+                    <span class="color-text-a">{{ agent.mobile_number }}</span>
                   </p>
                   <p>
                     <strong>Email: </strong>
-                    <span class="color-text-a"> agents@example.com</span>
+                    <span class="color-text-a">{{ agent.email }}</span>
                   </p>
                   <p>
                     <strong>skype: </strong>
-                    <span class="color-text-a"> Margaret.Es</span>
+                    <span class="color-text-a">{{ agent.skype }}</span>
                   </p>
                   <p>
                     <strong>Email: </strong>
-                    <span class="color-text-a"> agents@example.com</span>
+                    <span class="color-text-a">{{ agent.email_1 }}</span>
                   </p>
                 </div>
               </div>
               <div class="socials-footer">
                 <ul class="list-inline">
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.facebook.com/" class="link-one">
                       <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.x.com/" class="link-one">
                       <i class="fa fa-twitter" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.instagram.com/turdali.hasanboyev.07/" class="link-one">
                       <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://www.pinterest.com/" class="link-one">
                       <i class="fa fa-pinterest-p" aria-hidden="true"></i>
                     </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="#" class="link-one">
+                    <a href="https://dribbble.com/" class="link-one">
                       <i class="fa fa-dribbble" aria-hidden="true"></i>
                     </a>
                   </li>
@@ -117,40 +112,28 @@
       </div>
       <div class="col-md-12 section-t8">
         <div class="title-box-d">
-          <h3 class="title-d">My Properties (6)</h3>
+          <h3 class="title-d">My Properties ({{ agent.property_agent.count }})</h3>
         </div>
       </div>
       <div class="row property-grid grid">
-        <div class="col-sm-12">
-          <div class="grid-option">
-            <form>
-              <select class="custom-select">
-                <option selected>All</option>
-                <option value="1">New to Old</option>
-                <option value="2">For Rent</option>
-                <option value="3">For Sale</option>
-              </select>
-            </form>
-          </div>
-        </div>
+        {% for property in my_properties %}
         <div class="col-md-4">
           <div class="card-box-a card-shadow">
             <div class="img-box-a">
-              <img src="img/property-1.jpg" alt="" class="img-a img-fluid">
+              <img src="{{ property.image.url }}" alt="img" class="img-a img-fluid">
             </div>
             <div class="card-overlay">
               <div class="card-overlay-a-content">
                 <div class="card-header-a">
                   <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
+                    <a href="{{ property.get_absolute_url }}">{{ property.name }}
                   </h2>
                 </div>
                 <div class="card-body-a">
                   <div class="price-box d-flex">
-                    <span class="price-a">rent | $ 12.000</span>
+                    <span class="price-a">{{ property.status }} | {{ property.price_type }} {{ property.price }}</span>
                   </div>
-                  <a href="#" class="link-a">Click here to view
+                  <a href="{% url 'property-single' property.slug %}" class="link-a">Click here to view
                     <span class="ion-ios-arrow-forward"></span>
                   </a>
                 </div>
@@ -158,21 +141,21 @@
                   <ul class="card-info d-flex justify-content-around">
                     <li>
                       <h4 class="card-info-title">Area</h4>
-                      <span>340m
+                      <span>{{ property.area }}m
                         <sup>2</sup>
                       </span>
                     </li>
                     <li>
                       <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
+                      <span>{{ property.beds }}</span>
                     </li>
                     <li>
                       <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
+                      <span>{{ property.baths }}</span>
                     </li>
                     <li>
                       <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
+                      <span>{{ property.garages }}</span>
                     </li>
                   </ul>
                 </div>
@@ -180,241 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card-box-a card-shadow">
-            <div class="img-box-a">
-              <img src="img/property-3.jpg" alt="" class="img-a img-fluid">
-            </div>
-            <div class="card-overlay">
-              <div class="card-overlay-a-content">
-                <div class="card-header-a">
-                  <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
-                  </h2>
-                </div>
-                <div class="card-body-a">
-                  <div class="price-box d-flex">
-                    <span class="price-a">rent | $ 12.000</span>
-                  </div>
-                  <a href="#" class="link-a">Click here to view
-                    <span class="ion-ios-arrow-forward"></span>
-                  </a>
-                </div>
-                <div class="card-footer-a">
-                  <ul class="card-info d-flex justify-content-around">
-                    <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
-                      </span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-a card-shadow">
-            <div class="img-box-a">
-              <img src="img/property-6.jpg" alt="" class="img-a img-fluid">
-            </div>
-            <div class="card-overlay">
-              <div class="card-overlay-a-content">
-                <div class="card-header-a">
-                  <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
-                  </h2>
-                </div>
-                <div class="card-body-a">
-                  <div class="price-box d-flex">
-                    <span class="price-a">rent | $ 12.000</span>
-                  </div>
-                  <a href="#" class="link-a">Click here to view
-                    <span class="ion-ios-arrow-forward"></span>
-                  </a>
-                </div>
-                <div class="card-footer-a">
-                  <ul class="card-info d-flex justify-content-around">
-                    <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
-                      </span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-a card-shadow">
-            <div class="img-box-a">
-              <img src="img/property-7.jpg" alt="" class="img-a img-fluid">
-            </div>
-            <div class="card-overlay">
-              <div class="card-overlay-a-content">
-                <div class="card-header-a">
-                  <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
-                  </h2>
-                </div>
-                <div class="card-body-a">
-                  <div class="price-box d-flex">
-                    <span class="price-a">rent | $ 12.000</span>
-                  </div>
-                  <a href="#" class="link-a">Click here to view
-                    <span class="ion-ios-arrow-forward"></span>
-                  </a>
-                </div>
-                <div class="card-footer-a">
-                  <ul class="card-info d-flex justify-content-around">
-                    <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
-                      </span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-a card-shadow">
-            <div class="img-box-a">
-              <img src="img/property-8.jpg" alt="" class="img-a img-fluid">
-            </div>
-            <div class="card-overlay">
-              <div class="card-overlay-a-content">
-                <div class="card-header-a">
-                  <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
-                  </h2>
-                </div>
-                <div class="card-body-a">
-                  <div class="price-box d-flex">
-                    <span class="price-a">rent | $ 12.000</span>
-                  </div>
-                  <a href="#" class="link-a">Click here to view
-                    <span class="ion-ios-arrow-forward"></span>
-                  </a>
-                </div>
-                <div class="card-footer-a">
-                  <ul class="card-info d-flex justify-content-around">
-                    <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
-                      </span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card-box-a card-shadow">
-            <div class="img-box-a">
-              <img src="img/property-10.jpg" alt="" class="img-a img-fluid">
-            </div>
-            <div class="card-overlay">
-              <div class="card-overlay-a-content">
-                <div class="card-header-a">
-                  <h2 class="card-title-a">
-                    <a href="#">204 Mount
-                      <br /> Olive Road Two</a>
-                  </h2>
-                </div>
-                <div class="card-body-a">
-                  <div class="price-box d-flex">
-                    <span class="price-a">rent | $ 12.000</span>
-                  </div>
-                  <a href="#" class="link-a">Click here to view
-                    <span class="ion-ios-arrow-forward"></span>
-                  </a>
-                </div>
-                <div class="card-footer-a">
-                  <ul class="card-info d-flex justify-content-around">
-                    <li>
-                      <h4 class="card-info-title">Area</h4>
-                      <span>340m
-                        <sup>2</sup>
-                      </span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Beds</h4>
-                      <span>2</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Baths</h4>
-                      <span>4</span>
-                    </li>
-                    <li>
-                      <h4 class="card-info-title">Garages</h4>
-                      <span>1</span>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
   </div>
