--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,14 @@
                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
                     <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        {% else %}
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Register</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
@@ -110,7 +117,8 @@
                                 <ul class="list-unstyled">
                                     <li class="item-list-a">
                                         {% for company in companies %}
-                                        <i class="fa fa-angle-right"></i> <a href="{% url 'home' %}">{{ company.title }}</a>
+                                        <i class="fa fa-angle-right"></i> <a href="{% url 'home' %}">{{ company.title
+                                            }}</a>
                                         {% endfor %}
                                     </li>
                                 </ul>
