--- a/templates/base.html
+++ b/templates/base.html
@@ -98,10 +98,10 @@
                         <div class="w-footer-a">
                             <ul class="list-unstyled">
                                 <li class="color-a">
-                                    <span class="color-text-a">Phone .</span> +998939195081
+                                    <span class="color-text-a">Phone</span> +998939195081
                                 </li>
                                 <li class="color-a">
-                                    <span class="color-text-a">Email .</span> turdalihasanboyev70@gmail.com
+                                    <span class="color-text-a">Email</span> turdalihasanboyev70@gmail.com
                                 </li>
                             </ul>
                         </div>
@@ -117,8 +117,7 @@
                                 <ul class="list-unstyled">
                                     <li class="item-list-a">
                                         {% for company in companies %}
-                                        <i class="fa fa-angle-right"></i> <a href="{% url 'home' %}">{{ company.title
-                                            }}</a>
+                                        <i class="fa fa-angle-right"></i> <a href="{% url 'home' %}">{{ company.title }}</a>
                                         {% endfor %}
                                     </li>
                                 </ul>
@@ -181,7 +180,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/">
+                                <a href="https://www.instagram.com/turdali.hasanboyev.07/">
                                     <i class="fa fa-instagram" aria-hidden="true"></i>
                                 </a>
                             </li>
