--- a/templates/blog-single.html
+++ b/templates/blog-single.html
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.instagram.com/">
+                <a href="https://www.instagram.com/turdali.hasanboyev.07/">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
               </li>
