--- a/templates/property-single.html
+++ b/templates/property-single.html
@@ -250,14 +250,14 @@
                   </div>
                   <div class="col-md-12 mb-1">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-lg form-control-a" name="email" id="inputEmail1"
-                        placeholder="Email *" required>
+                      <input type="email" class="form-control form-control-lg form-control-a" name="email"
+                        id="inputEmail1" placeholder="Email *" required>
                     </div>
                   </div>
                   <div class="col-md-12 mb-1">
                     <div class="form-group">
-                      <textarea id="textMessage" class="form-control" name="comment" placeholder="Comment *" name="message" cols="45"
-                        rows="8" required></textarea>
+                      <textarea id="textMessage" class="form-control" name="comment" placeholder="Comment *"
+                        name="message" cols="45" rows="8" required></textarea>
                     </div>
                   </div>
                   <div class="col-md-12">
